@@ -1,125 +1,8 @@
-// // backend/src/main/java/com/midigenerator/config/SecurityConfig.java
-// package com.midigenerator.config;
-
-// import com.midigenerator.security.*;
-// import lombok.RequiredArgsConstructor;
-// import org.springframework.beans.factory.annotation.Value;
-// import org.springframework.context.annotation.Bean;
-// import org.springframework.context.annotation.Configuration;
-// import org.springframework.security.authentication.AuthenticationManager;
-// import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
-// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-// import org.springframework.security.config.http.SessionCreationPolicy;
-// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-// import org.springframework.security.crypto.password.PasswordEncoder;
-// import org.springframework.security.web.SecurityFilterChain;
-// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-// import org.springframework.web.cors.CorsConfiguration;
-// import org.springframework.web.cors.CorsConfigurationSource;
-// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-// import java.util.Arrays;
-// import java.util.List;
-
-// @Configuration
-// @EnableWebSecurity
-// @EnableMethodSecurity
-// @RequiredArgsConstructor
-// public class SecurityConfig {
-
-//     private final UserDetailsServiceImpl userDetailsService;
-//     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-
-//     @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
-//     private String allowedOrigins;
-
-//     @Bean
-//     public PasswordEncoder passwordEncoder() {
-//         return new BCryptPasswordEncoder(12);
-//     }
-
-//     @Bean
-//     public DaoAuthenticationProvider authenticationProvider() {
-//         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-//         authProvider.setUserDetailsService(userDetailsService);
-//         authProvider.setPasswordEncoder(passwordEncoder());
-//         return authProvider;
-//     }
-
-//     @Bean
-//     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-//         return authConfig.getAuthenticationManager();
-//     }
-
-//     @Bean
-//     public CorsConfigurationSource corsConfigurationSource() {
-//         CorsConfiguration configuration = new CorsConfiguration();
-
-//         List<String> origins = Arrays.stream(allowedOrigins.split(","))
-//                 .map(String::trim)
-//                 .filter(origin -> !origin.isEmpty())
-//                 .toList();
-
-//         if (origins.isEmpty()) {
-//             configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
-//         } else {
-//             configuration.setAllowedOrigins(origins);
-//         }
-
-//         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
-//         configuration.setAllowedHeaders(Arrays.asList("*"));
-//         configuration.setAllowCredentials(false); // ✅ Changed to false - no cookies needed
-//         configuration.setMaxAge(3600L);
-
-//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//         source.registerCorsConfiguration("/**", configuration);
-//         return source;
-//     }
-
-//     @Bean
-//     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-//         http
-//                 // ✅ DISABLE CSRF - using JWT authentication
-//                 .csrf(csrf -> csrf.disable())
-//                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//                 .authorizeHttpRequests(auth -> auth
-//                         .requestMatchers("/api/auth/**").permitAll()
-//                         .requestMatchers("/api/health").permitAll()
-//                         .requestMatchers("/api/pricing/plans").permitAll()
-//                         .requestMatchers("/api/midi-files/**").permitAll()
-//                         .requestMatchers("/h2-console/**").permitAll()
-//                         .anyRequest().authenticated()
-//                 )
-//                 .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
-
-//         http.authenticationProvider(authenticationProvider());
-//         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
-//         return http.build();
-//     }
-// }
-
-
-
-
-
-
-
-
-
-
-
-//midigenerator/config/SecurityConfig.java
-//midigenerator/config/SecurityConfig.java
+// backend/src/main/java/com/midigenerator/config/SecurityConfig.java
 package com.midigenerator.config;
 
 import com.midigenerator.security.*;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -140,10 +23,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-@Slf4j
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -153,18 +33,8 @@ public class SecurityConfig {
     private final UserDetailsServiceImpl userDetailsService;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    // ✅ Load URLs from environment variables
-    @Value("${app.frontend-url:http://localhost:5173}")
-    private String frontendUrl;
-
-    @Value("${app.backend-url:http://localhost:8080}")
-    private String backendUrl;
-
-    @Value("${midi.generator.url:http://localhost:5000/api}")
-    private String midiGeneratorUrl;
-
-    @Value("${midi.generator.base-url:http://localhost:5000}")
-    private String midiGeneratorBaseUrl;
+    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -188,103 +58,233 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // ✅ Build allowed origins from environment variables
-        List<String> allowedOrigins = Stream.of(
-                frontendUrl,
-                backendUrl,
-                midiGeneratorUrl.replace("/api", ""),
-                midiGeneratorBaseUrl,
-                // Development URLs (always include for local testing)
-                "http://localhost:5173",
-                "http://localhost:5137",
-                "http://localhost:8080",
-                "http://localhost:3000",
-                "http://localhost:5000"
-        )
-        .filter(url -> url != null && !url.trim().isEmpty())
-        .distinct() // Remove duplicates
-        .collect(Collectors.toList());
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(origin -> !origin.isEmpty())
+                .toList();
 
-        configuration.setAllowedOrigins(allowedOrigins);
+        if (origins.isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
+        } else {
+            configuration.setAllowedOrigins(origins);
+        }
 
-        // ✅ Allow all standard HTTP methods
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
-        ));
-
-        // ✅ Specify allowed headers explicitly
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers",
-                "X-CSRF-TOKEN"
-        ));
-
-        // ✅ Expose headers that the frontend needs to read
-        configuration.setExposedHeaders(Arrays.asList(
-                "Content-Disposition",
-                "Content-Type",
-                "Content-Length",
-                "Authorization",
-                "X-CSRF-TOKEN",
-                "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Credentials"
-        ));
-
-        // ✅ Allow credentials (cookies, authorization headers)
-        configuration.setAllowCredentials(true);
-        
-        // ✅ Cache preflight response for 1 hour
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(false); // ✅ Changed to false - no cookies needed
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
-        // ✅ Log configured CORS origins on startup
-        log.info("✅ CORS Configured with origins:");
-        allowedOrigins.forEach(origin -> log.info("   - {}", origin));
-
         return source;
     }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // ✅ Disable CSRF for stateless JWT API
+                // ✅ DISABLE CSRF - using JWT authentication
                 .csrf(csrf -> csrf.disable())
-
-                // ✅ CRITICAL: Enable CORS with our configuration
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                
-                // ✅ Stateless session management
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                
-                // ✅ Configure authorization rules
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints - NO authentication required
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/health").permitAll()
                         .requestMatchers("/api/pricing/plans").permitAll()
                         .requestMatchers("/api/midi-files/**").permitAll()
                         .requestMatchers("/h2-console/**").permitAll()
-                        
-                        // All other endpoints require authentication
                         .anyRequest().authenticated()
                 )
-                
-                // ✅ Allow H2 console to use frames
                 .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
 
-        // ✅ Set authentication provider
         http.authenticationProvider(authenticationProvider());
-        
-        // ✅ Add JWT filter before username/password authentication filter
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+//midigenerator/config/SecurityConfig.java
+// //midigenerator/config/SecurityConfig.java
+// package com.midigenerator.config;
+
+// import com.midigenerator.security.*;
+// import lombok.RequiredArgsConstructor;
+// import lombok.extern.slf4j.Slf4j;
+// import org.springframework.beans.factory.annotation.Value;
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.security.authentication.AuthenticationManager;
+// import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+// import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+// import org.springframework.security.crypto.password.PasswordEncoder;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+// import java.util.Arrays;
+// import java.util.List;
+// import java.util.stream.Collectors;
+// import java.util.stream.Stream;
+
+// @Slf4j
+// @Configuration
+// @EnableWebSecurity
+// @EnableMethodSecurity
+// @RequiredArgsConstructor
+// public class SecurityConfig {
+
+//     private final UserDetailsServiceImpl userDetailsService;
+//     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+//     // ✅ Load URLs from environment variables
+//     @Value("${app.frontend-url:http://localhost:5173}")
+//     private String frontendUrl;
+
+//     @Value("${app.backend-url:http://localhost:8080}")
+//     private String backendUrl;
+
+//     @Value("${midi.generator.url:http://localhost:5000/api}")
+//     private String midiGeneratorUrl;
+
+//     @Value("${midi.generator.base-url:http://localhost:5000}")
+//     private String midiGeneratorBaseUrl;
+
+//     @Bean
+//     public PasswordEncoder passwordEncoder() {
+//         return new BCryptPasswordEncoder(12);
+//     }
+
+//     @Bean
+//     public DaoAuthenticationProvider authenticationProvider() {
+//         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+//         authProvider.setUserDetailsService(userDetailsService);
+//         authProvider.setPasswordEncoder(passwordEncoder());
+//         return authProvider;
+//     }
+
+//     @Bean
+//     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+//         return authConfig.getAuthenticationManager();
+//     }
+
+//     @Bean
+//     public CorsConfigurationSource corsConfigurationSource() {
+//         CorsConfiguration configuration = new CorsConfiguration();
+
+//         // ✅ Build allowed origins from environment variables
+//         List<String> allowedOrigins = Stream.of(
+//                 frontendUrl,
+//                 backendUrl,
+//                 midiGeneratorUrl.replace("/api", ""),
+//                 midiGeneratorBaseUrl,
+//                 // Development URLs (always include for local testing)
+//                 "http://localhost:5173",
+//                 "http://localhost:5137",
+//                 "http://localhost:8080",
+//                 "http://localhost:3000",
+//                 "http://localhost:5000"
+//         )
+//         .filter(url -> url != null && !url.trim().isEmpty())
+//         .distinct() // Remove duplicates
+//         .collect(Collectors.toList());
+
+//         configuration.setAllowedOrigins(allowedOrigins);
+
+//         // ✅ Allow all standard HTTP methods
+//         configuration.setAllowedMethods(Arrays.asList(
+//                 "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+//         ));
+
+//         // ✅ Specify allowed headers explicitly
+//         configuration.setAllowedHeaders(Arrays.asList(
+//                 "Authorization",
+//                 "Content-Type",
+//                 "X-Requested-With",
+//                 "Accept",
+//                 "Origin",
+//                 "Access-Control-Request-Method",
+//                 "Access-Control-Request-Headers",
+//                 "X-CSRF-TOKEN"
+//         ));
+
+//         // ✅ Expose headers that the frontend needs to read
+//         configuration.setExposedHeaders(Arrays.asList(
+//                 "Content-Disposition",
+//                 "Content-Type",
+//                 "Content-Length",
+//                 "Authorization",
+//                 "X-CSRF-TOKEN",
+//                 "Access-Control-Allow-Origin",
+//                 "Access-Control-Allow-Credentials"
+//         ));
+
+//         // ✅ Allow credentials (cookies, authorization headers)
+//         configuration.setAllowCredentials(true);
+        
+//         // ✅ Cache preflight response for 1 hour
+//         configuration.setMaxAge(3600L);
+
+//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//         source.registerCorsConfiguration("/**", configuration);
+
+//         // ✅ Log configured CORS origins on startup
+//         log.info("✅ CORS Configured with origins:");
+//         allowedOrigins.forEach(origin -> log.info("   - {}", origin));
+
+//         return source;
+//     }
+
+//     @Bean
+//     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+//         http
+//                 // ✅ Disable CSRF for stateless JWT API
+//                 .csrf(csrf -> csrf.disable())
+
+//                 // ✅ CRITICAL: Enable CORS with our configuration
+//                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                
+//                 // ✅ Stateless session management
+//                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                
+//                 // ✅ Configure authorization rules
+//                 .authorizeHttpRequests(auth -> auth
+//                         // Public endpoints - NO authentication required
+//                         .requestMatchers("/api/auth/**").permitAll()
+//                         .requestMatchers("/api/health").permitAll()
+//                         .requestMatchers("/api/pricing/plans").permitAll()
+//                         .requestMatchers("/api/midi-files/**").permitAll()
+//                         .requestMatchers("/h2-console/**").permitAll()
+                        
+//                         // All other endpoints require authentication
+//                         .anyRequest().authenticated()
+//                 )
+                
+//                 // ✅ Allow H2 console to use frames
+//                 .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
+
+//         // ✅ Set authentication provider
+//         http.authenticationProvider(authenticationProvider());
+        
+//         // ✅ Add JWT filter before username/password authentication filter
+//         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+//         return http.build();
+//     }
+// }
